--- a/css/login.css
+++ b/css/login.css
@@ -1,9 +1,10 @@
 #home-section-1 {
   background-image: url('../assets/background-desk.jpeg');
   background-size: cover;
-  height: 650px;
+  background-position: center;
+  height: 100vh;
   text-align: center;
-  padding-top: 50px;
+  padding-top: 80px;
 }
 
 .splash-logo { width: 300px; }
